[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://sprite/arranged-flowers-love-54320.jpg" type="Texture" id=2]
[ext_resource path="res://sprite/skybox-dusk.png" type="Texture" id=3]
[ext_resource path="res://sprite/floor.png" type="Texture" id=4]
[ext_resource path="res://sprite/p1_win.png" type="Texture" id=5]
[ext_resource path="res://title-screen-option.tres" type="Theme" id=6]
[ext_resource path="res://scene/FadeIn.tscn" type="PackedScene" id=7]

[node name="WinScreen" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = 990.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.784314 )

[node name="TextureRect" type="TextureRect" parent="ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect" index="0"]

modulate = Color( 1, 0.854902, 0.584314, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="TextureRect2" type="TextureRect" parent="ColorRect/TextureRect" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 310.0
margin_right = 550.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="ColorRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 430.0
margin_right = 910.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 6 )
autowrap = true
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextTick" type="Timer" parent="." index="2"]

pause_mode = 2
process_mode = 1
wait_time = 0.04
one_shot = false
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="FadeInLayer" parent="." index="3" instance=ExtResource( 7 )]

[connection signal="timeout" from="TextTick" to="." method="_on_TextTick_timeout"]


